# chip8-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: display.rs  interpreter.rs  keyboard.rs  lib.rs  main.rs  memory.rs  registers.rs  sound.rs
