[package]
name = "chip8"
version = "0.1.0"
authors = ["Jan-Christoph Klie <git@mrklie.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chip8"
path = "src/lib.rs"

[[bin]]
name = "chip8"
path = "src/main.rs"

[dependencies]
